# django-playground

./: README.md  pyproject.toml
config/: settings.py  urls.py
poc/: models.py  serializers.py  urls.py  views.py
poc/migrations/: 0001_initial.py
